tests/should_succeed/bug/653.coma
module M_omg
  use creusot.int.UInt64
  use creusot.prelude.Any
  use int.ComputerDivision
  use int.Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec omg (n: UInt64.t) (return (x: UInt64.t)) = (! bb0
    [ bb0 = s0 [ s0 = [ &_ret <- n ] s1 | s1 = return {_ret} ] ]
    [ & _ret: UInt64.t = Any.any_l () | & n: UInt64.t = n ])
    [ return (result: UInt64.t) -> {[@stop_split] [@expl:omg ensures] UInt64.t'int result
      = ComputerDivision.div (UInt64.t'int n * (UInt64.t'int n + 1)) 2}
      (! return {result}) ]
end
